samples/_failures_safe/1761519884_60e7b6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e48ac454.c:160:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  160 | void prim
      | ^~~~
